--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body class="">
 
-    <section id="navbar" class="w-full bg-blue-500/50 fixed z-[100]">
+    <section id="navbar" class="w-full bg-blue-400 fixed z-[100]">
         <div class="container mx-auto">
 
             <nav class="flex flex-wrap justify-between items-center px-5 py-2">
@@ -45,12 +45,16 @@
         style="background-image: url(../images/hero/Hero_bg.png);background-repeat: no-repeat; background-size: cover;"
         class="min-h-screen">
         <div class="min-h-screen flex items-center">
-            <div class="container mx-auto space-y-10 sm:space-y-5 ">
-                <div class="text-center font-bold text-3xl sm:text-5xl">
+            <div class="container mx-auto space-y-10 sm:space-y-8 ">
+                <div class="text-center font-bold text-3xl sm:text-6xl">
                     We Care About Your Pet
                 </div>
-                <div class="text-center sm:text-[16px] mt-5 ">
+                <div class="hidden sm:block text-center text-xl mt-5 ">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Vivamus lacinia odio vitae vestibulum
+                    vestibulum.
+                </div>
+                <div class="block sm:hidden text-center text-xl mt-5 ">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, sint. Vivamus lacinia odio vitae vestibulum
                     vestibulum.
                 </div>
                 <div class="text-center mt-5">
@@ -66,15 +70,15 @@
     </section>
 
     <section id="profile" class="relative bg-[#739ee3] min-h-screen">
-        <div class="z-10 min-h-screen text text-center py-5 sm:py-0 ">
+        <div class="min-h-screen text text-center py-5 sm:py-0 ">
             <div class="container mx-auto">
                 <div class="text-3xl mt-5 sm:mt-0 sm:text-5xl sm:font-bold sm:pt-10">
                     Title Here
                 </div>
                 <div class="mt-5 mb-10 sm:mb-0">
-                    <h1 class="text-sm sm:text-[16px">Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+                    <h1 class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
                         Dolores praesentium
-                        laudantium placeat dolorum.
+                        laudantium placeat dolorum.</h1>
                 </div>
 
                 <div class="grid justify-items-center space-y-5 sm:space-y-0 
@@ -106,10 +110,10 @@
 
             </div>
         </div>
-        <img class="absolute top-0 left-0 w-72 hidden sm:block " src="../images/sidebar1.png" alt="">
-        <img class="absolute top-0 right-0 w-72 hidden sm:block " src="../images/sidebar2.png" alt="">
-        <img class="absolute top-14 right-8 w-12 hidden sm:block" src="../images/dotted.png" alt="">
-        <img class="absolute top-14 left-10 w-12 hidden sm:block" src="../images/triangle.png" alt="">
+        <img class="absolute top-0 left-0 w-16 sm:w-72  " src="../images/sidebar1.png" alt="">
+        <img class="absolute top-0 right-0 w-16 sm:w-72 " src="../images/sidebar2.png" alt="">
+        <img class="absolute top-10 sm:top-14 right-10 sm:right-8 w-8 sm:w-12 " src="../images/dotted.png" alt="">
+        <img class="absolute top-8 left-6 sm:top-14 sm:left-10 w-10 sm:w-12 " src="../images/triangle.png" alt="">
         <img class="absolute bottom-0 right-24 w-12 hidden sm:block" src="../images/triangle2.png" alt="">
 
     </section>
@@ -120,7 +124,7 @@
         class="min-h-screen relative">
         <div class="min-h-screen container mx-auto text-center">
             <div class="text-3xl pt-10
-                        sm:text-5xl sm:font-bold sm:pt-16">
+                        sm:text-5xl font-bold sm:pt-16">
                 Title Here
             </div>
             <div class="mt-5">
@@ -155,7 +159,7 @@
             </div>
 
         </div>
-        <img class="absolute -top-1 left-28 w-12" src="../images/dotted.png" alt="">
+        <img class="absolute -top-1 left-10 w-8 sm:left-28 sm:w-12" src="../images/dotted.png" alt="">
 
     </section>
 
